force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Cloud__c.field-meta.xml
<CustomField>
    <fullName>Cloud__c</fullName>
    <formula>Scrum_Team__r.Cloud_LU__r.Name</formula>
    <label>Cloud</label>
    <type>Text</type>
</CustomField>