force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Coupa_Record__c.field-meta.xml
<CustomField>
    <fullName>Coupa_Record__c</fullName>
    <description>For commercial products only.</description>
    <inlineHelpText>Link to the Coupa record for this product (for commercial products only).</inlineHelpText>
    <label>Coupa Record</label>
    <type>Url</type>
</CustomField>