force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Date_Approval_Needed_By__c.field-meta.xml
<CustomField>
    <fullName>Date_Approval_Needed_By__c</fullName>
    <defaultValue>Today() + 28</defaultValue>
    <description>Date equivalent to your teams feature freeze date. Please account for 3PP SLA time frames referenced on site</description>
    <inlineHelpText>Date equivalent to your teams feature freeze date. Please account for 3PP SLA time frames referenced on site</inlineHelpText>
    <label>Date Approval Needed By</label>
    <required>true</required>
    <type>Date</type>
</CustomField>