force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Does_this_contain_client_side_code__c.field-meta.xml
<CustomField>
    <fullName>Does_this_contain_client_side_code__c</fullName>
    <inlineHelpText>Does this project contain JavaScript or similar code articulated in a client browser? Do portions of the package run in the user’s browser?</inlineHelpText>
    <label>Is there any client-side code?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>