force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Jar_Name__c.field-meta.xml
<CustomField>
    <fullName>Jar_Name__c</fullName>
    <label>Jar Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>