force-app/main/default/objects/ADM_Third_Party_Software__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Open Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>