force-app/main/default/objects/ADM_Third_Party_Software__c/fields/License_URL__c.field-meta.xml
<CustomField>
    <fullName>License_URL__c</fullName>
    <inlineHelpText>Please provide a link that demonstrates what license governs this particular 3PP request. It should not be a link to a generic copy of an open source license.</inlineHelpText>
    <label>License URL</label>
    <type>Url</type>
</CustomField>