force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>apex-parser</fullName>
            </value>
            <value>
                <fullName>platform</fullName>
            </value>
            <value>
                <fullName>resin</fullName>
            </value>
            <value>
                <fullName>sfdc</fullName>
            </value>
            <value>
                <fullName>sfdc-test/func</fullName>
            </value>
            <value>
                <fullName>sfdc-test/unit</fullName>
            </value>
            <value>
                <fullName>shared</fullName>
            </value>
            <value>
                <fullName>shared/endorsed</fullName>
            </value>
            <value>
                <fullName>udd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>