force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>WIll you distribute the code to anyone outside of our data centers?</inlineHelpText>
    <label>Use Cases/Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>