force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Perforce_Path__c.field-meta.xml
<CustomField>
    <fullName>Perforce_Path__c</fullName>
    <description>Link to Perforce Path or Direct Download Link</description>
    <inlineHelpText>Link to Perforce Path or Direct Download Link</inlineHelpText>
    <label>Source Code Path or URL</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>