force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <inlineHelpText>Please describe what this Third Party Property does and why you want to use it.</inlineHelpText>
    <label>Purpose</label>
    <length>80</length>
    <type>Text</type>
</CustomField>