force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Request_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_Other__c</fullName>
    <label>Request Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>