force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Build or Release</label>
    <referenceTo>ADM_Build__c</referenceTo>
    <relationshipLabel>Third Party Software</relationshipLabel>
    <relationshipName>Third_Party_Software</relationshipName>
    <type>Lookup</type>
</CustomField>