force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Scrum_Team__c.field-meta.xml
<CustomField>
    <fullName>Scrum_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scrum Team (Owner)</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Third Party Software</relationshipLabel>
    <relationshipName>Third_Party_Software</relationshipName>
    <type>Lookup</type>
</CustomField>