force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Used_By__c.field-meta.xml
<CustomField>
    <fullName>Used_By__c</fullName>
    <label>Used By</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>