force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>15</length>
    <type>Text</type>
</CustomField>