force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Will_this_code_be_distributed__c.field-meta.xml
<CustomField>
    <fullName>Will_this_code_be_distributed__c</fullName>
    <inlineHelpText>Will this code be distributed outside of Salesforce?</inlineHelpText>
    <label>Will this code be distributed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>