force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Will_you_actually_modify_the_code__c.field-meta.xml
<CustomField>
    <fullName>Will_you_actually_modify_the_code__c</fullName>
    <inlineHelpText>Will you modify the code, or simply use it as-is?</inlineHelpText>
    <label>Will you modify the code?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>