force-app/main/default/objects/ADM_Third_Party_Software__c/fields/Will_you_modify_the_code__c.field-meta.xml
<CustomField>
    <fullName>Will_you_modify_the_code__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will you use the code as-is or will you modify it?</inlineHelpText>
    <label>Old will you modify the code?</label>
    <type>Checkbox</type>
</CustomField>