force-app/main/default/objects/ADM_Third_Party_Software__c/validationRules/DateApprovalNeeded.validationRule-meta.xml
<ValidationRule>
    <fullName>DateApprovalNeeded</fullName>
    <active>true</active>
    <description>Date Approval Needed</description>
    <errorConditionFormula>Date_Approval_Needed_By__c  &lt;  TODAY() + 28</errorConditionFormula>
    <errorDisplayField>Date_Approval_Needed_By__c</errorDisplayField>
    <errorMessage>Date Approval Needed By can not be less than 28 days from today.</errorMessage>
</ValidationRule>