force-app/main/default/objects/ADM_Third_Party_Software__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Version__c</columns>
    <columns>Jar_Name__c</columns>
    <columns>Scrum_Team__c</columns>
    <columns>Purpose__c</columns>
    <columns>Used_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>