force-app/main/default/objects/ADM_Third_Party_Software__c/listViews/No_owner.listView-meta.xml
<ListView>
    <fullName>No_owner</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Jar_Name__c</columns>
    <columns>Used_By__c</columns>
    <columns>Scrum_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>No owner</label>
</ListView>